重点重构lushopapi的用户服务，进一步实现测试
